# jenkinsctl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  jenkins.py  pyproject.toml  pyvenv.cfg  requirements.txt  tui.sh
.github/workflows/: publish-image.yml  pypi_release.yml
jenkinsctl/: cli.py  cli2.py  commons.py  jbuild.py  jenkins.py  jget_config.py
jenkinsctl/commands/: build.py  config.py  enable_completion.py  jobs.py  json.py  list.py  logs.py  rebuild.py
jenkinsctl/configs/: logging_config.py  session.py
jenkinsctl/jenkins/: cli_helper.py  client.py  commons.py  console_util.py  job.py  utils.py
jenkinsctl/old/: jbuild.py  jget_config.py
sample/: build  build-param.json  build.josn  config.yaml  job.json
src/: jbuild.py  jenkins.py
tests/: test_ok.py
