[tool.poetry]
name = "jenkinsctl"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.2"
dynaconf = "^3.2.6"
rich = "^13.8.1"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
jenkinsctl = "jenkinsctl.cli:cli"
