[tool.poetry]
name = "jenkinsctl"
version = "1.0.8"
description = "A command-line tool to interact with Jenkins jobs 🚀"
authors = ["Aman Shaw <amanshaw4511@protonmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
maintainers = [
    "Aman Shaw <amanshaw4511@protonmail.com>"
]
homepage = "https://github.com/amanshaw4511/jenkinsctl"
repository = "https://github.com/amanshaw4511/jenkinsctl"
keywords = ["jenkins", "jenkin"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.2"
dynaconf = "^3.2.6"
rich = "^13.8.1"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
click = "^8.1.7"
click-completion = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
jenkinsctl = "jenkinsctl.cli:cli"
